Observe TouchExplorationPassThrough property change

- ArcAccessibilityHelperBridge updates TouchExplorationPassThrough
  property after TouchExplorationManager reads it. It was the cause of
  the issue. But, in general, it can be updated any time. This CL
  changes the manager to observe property change and update state every
  time when it's changed.

Bug: 854919
Test: None
Change-Id: I3413b87e818b6043d9ac0167dd1eba176f100022
Reviewed-on: https://chromium-review.googlesource.com/1114577
Commit-Queue: Yuki Awano <yawano@chromium.org>
Reviewed-by: David Tseng <dtseng@chromium.org>
Cr-Commit-Position: refs/heads/master@{#573236}
Former-commit-id: 05991a2f7a461f9addf3a146c58084f2817b35ae